Stop horizontal scrolling
The titles were too long for the page and causing horizontal scrolling, this is now fixed

--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -136,7 +136,6 @@ button, .btn {
 		flex-direction: column;
    		align-items: center;
     	justify-content: center;
-		width: 100vw;		
 		color: white;	
 		
 	}
